data/all_generated_tests/raw_wast_tests/br_IncorrectBranchTargetResolution_109.wast
;; 10. **Test Disregarded Argument Popping:**     - Use `br` where argument popping is critical for subsequent execution steps. Tests if the implementation correctly handles popping arguments as per label's requirements.

(assert_invalid
  (module
    (func $test-disregarded-arg-popping
      (block (result i32)
        (i32.const 42)
        (br 0 (i32.const 0))
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)